Fix: visible style tag

--- a/24.02.2023/style.css
+++ b/24.02.2023/style.css
@@ -1,9 +1,7 @@
 * {
-    all: unset;
-}
-
-title {
-    display: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .container {
